# crawler

./: .gitignore  CNAME  README.md  pyproject.toml
.github/workflows/: crawl.yml  deploy-office.yml  notify-wecom.yml  pages.yml
data/: bidscout.sqlite3  documents.jsonl  last-run.json
src/bidscout_crawler/: classifier.py  cli.py  crawler.py  notify.py  report.py  storage.py
src/bidscout_crawler/report_assets/: app.css  app.js
tests/: test_classifier.py  test_crawler.py  test_notify.py  test_report.py
